@@ -1,83 +1,73 @@
-import io.appium.java_client.AppiumBy;
-import io.appium.java_client.android.AndroidDriver;
-
-import io.appium.java_client.android.options.UiAutomator2Options;
-import org.openqa.selenium.WebElement;
-import org.openqa.selenium.support.ui.ExpectedConditions;
-import org.openqa.selenium.support.ui.WebDriverWait;
-import org.testng.Assert;
-import org.testng.annotations.AfterClass;
-import org.testng.annotations.BeforeClass;
-import org.testng.annotations.Test;
-
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.time.Duration;
-import java.util.List;
-
 public class Activity6 {
-        // Driver Declaration
-        AndroidDriver driver;
-        WebDriverWait wait;
+	AndroidDriver driver;
+	WebDriverWait wait;
 
-        // Set up method
-        @BeforeClass
-        public void setUp() throws MalformedURLException {
-            // Desired Capabilities
-            UiAutomator2Options options = new UiAutomator2Options();
-            options.setPlatformName("android");
-            options.setAutomationName("UiAutomator2");
-            options.setAppPackage("com.android.chrome");
-            options.setAppActivity("com.google.android.apps.chrome.Main");
-            options.noReset();
+	@BeforeClass
+	public void setUp() throws MalformedURLException, URISyntaxException {
+		// Desired Capabilities
+		UiAutomator2Options options = new UiAutomator2Options();
+		options.setPlatformName("Android");
+		options.setAutomationName("UiAutomator2");
+		options.setAppPackage("com.android.chrome");
+		options.setAppActivity("com.google.android.apps.chrome.Main");
+		options.noReset();
 
-            // Server Address
-            URL serverURL = new URL("http://localhost:4723/wd/hub");
+		// Server URL
+		URL serverURL = new URI("http://localhost:4723").toURL();
 
-            // Driver Initialization
-            driver = new AndroidDriver(serverURL, options);
-            wait = new WebDriverWait(driver, Duration.ofSeconds(10));
+		// Driver initialization
+		driver = new AndroidDriver(serverURL, options);
+		wait = new WebDriverWait(driver, Duration.ofSeconds(20));
 
-            // Open the page in Chrome
-            driver.get("https://www.training-support.net/selenium/lazy-loading");
-        }
+		// Open Selenium page
+		driver.get("https://training-support.net/webelements/sliders");
+	}
 
-        // Test method
-        @Test
-        public void chromeTest() {
-            String UiScrollable = "UiScrollable(UiSelector().scrollable(true))";
+	@Test
+	public void volume75Test() {
+		// Wait for page to load
+		wait.until(ExpectedConditions.elementToBeClickable(AppiumBy.xpath("//android.widget.SeekBar")));
+		// Get the size of the screen
+		Dimension dims = driver.manage().window().getSize();
+		// Set the start and end points
+		Point start = new Point((int) (dims.getWidth() * .50), (int) (dims.getHeight() * .77));
+		Point end = new Point((int) (dims.getWidth() * .67), (int) (dims.getHeight() * .77));
+		// Perform swipe
+		doSwipe(driver, start, end, 2000);
 
-            // Wait for page to load
-            wait.until(ExpectedConditions.visibilityOfElementLocated(AppiumBy.className("android.widget.Image")));
+		// Get the volume level
+		String volumeText = driver
+			.findElement(AppiumBy.xpath("//android.view.View/android.widget.TextView[contains(@text, '%')]"))
+			.getText();
 
-            // Find all the image elements on the page
-            List<WebElement> imageElements = driver.findElements(AppiumBy.className("android.widget.Image"));
+		// Assertions
+		assertTrue(volumeText.contains("75%"));
+	}
 
-            // Print the number of images
-            System.out.println("Before scroll: " + imageElements.size());
+	@Test
+	public void volume25Test() {
+		// Wait for page to load
+		wait.until(ExpectedConditions.elementToBeClickable(AppiumBy.xpath("//android.widget.SeekBar")));
+		// Get the size of the screen
+		Dimension dims = driver.manage().window().getSize();
+		// Set the start and end points
+		Point start = new Point((int) (dims.getWidth() * .50), (int) (dims.getHeight() * .77));
+		Point end = new Point((int) (dims.getWidth() * .33), (int) (dims.getHeight() * .77));
+		// Perform swipe
+		doSwipe(driver, start, end, 2000);
 
-            // Scroll using UiScrollable
-            driver.findElement(AppiumBy.androidUIAutomator(UiScrollable + ".scrollTextIntoView(\"helen\")"));
+		// Get the volume level
+		String volumeText = driver
+			.findElement(AppiumBy.xpath("//android.view.View/android.widget.TextView[contains(@text, '%')]"))
+			.getText();
 
-            // Get image elements after scroll
-            imageElements = driver.findElements(AppiumBy.className("android.widget.Image"));
+		// Assertions
+		assertTrue(volumeText.contains("25%"));
+	}
 
-            // Print the number of images after scroll
-            System.out.println("After scroll: " + imageElements.size());
-
-            // Assertions
-            Assert.assertEquals(imageElements.size(), 20);
-
-        }
-
-
-        // Tear down method
-        @AfterClass
-        public void tearDown() {
-            // Close the app
-            System.out.println("Test End");
-            driver.quit();
-        }
-
-
+	@AfterClass
+	public void tearDown() {
+		// Close the browser
+		driver.quit();
+	}
 }
