@@ -1,49 +1,48 @@
 import io.appium.java_client.AppiumBy;
 import io.appium.java_client.android.AndroidDriver;
 import io.appium.java_client.android.options.UiAutomator2Options;
-import org.testng.Assert;
+import org.openqa.selenium.support.ui.WebDriverWait;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
+
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.time.Duration;
 
-public class Activity1 {
+public class Activity2 {
     // Driver Declaration
     AndroidDriver driver;
-
+    WebDriverWait wait;
     // Set up method
     @BeforeClass
-    public void setUp() throws MalformedURLException, URISyntaxException {
+    public void setUp() throws MalformedURLException, InterruptedException {
         // Desired Capabilities
         UiAutomator2Options options = new UiAutomator2Options();
         options.setPlatformName("android");
         options.setAutomationName("UiAutomator2");
-        options.setAppPackage("com.android.calculator2");
-        options.setAppActivity(".Calculator");
+        options.setAppPackage("com.android.chrome");
+        options.setAppActivity("com.google.android.apps.chrome.Main");
         options.noReset();
 
         // Server Address
-        URL serverURL = new URI("http://localhost:4723").toURL();
+        URL serverURL = new URL("http://localhost:4723/wd/hub");
 
         // Driver Initialization
         driver = new AndroidDriver(serverURL, options);
+        driver.get("https://www.training-support.net");
+        wait = new WebDriverWait(driver , Duration.ofSeconds(10));
     }
 
     // Test method
     @Test
-    public void multiplyTest() {
-        // Perform the calculation
-        driver.findElement(AppiumBy.id("digit_5")).click();
-        driver.findElement(AppiumBy.accessibilityId("multiply")).click();
-        driver.findElement(AppiumBy.id("digit_8")).click();
-        driver.findElement(AppiumBy.accessibilityId("equals")).click();
+    public void chromeTest() throws InterruptedException {
 
-        // Find the result
-        String result = driver.findElement(AppiumBy.id("result")).getText();
 
-        // Assertion
-        Assert.assertEquals(result, "40");
+        String pageHeading = driver.findElement(AppiumBy.xpath( "//android.view.View[@text='Training Support']"))
+                .getText();
+        System.out.println(pageHeading);
+        System.out.println("Test block executed");
     }
 
 
